Add configuration for backend and collections

--- a/.github/workflows/admin/config.yml
+++ b/.github/workflows/admin/config.yml
@@ -1,1 +1,18 @@
+backend:
+  name: github
+  repo: yourusername/thiser-journal
+  branch: main
+
+media_folder: "assets/uploads"
+public_folder: "/assets/uploads"
+
+collections:
+  - name: "articles"
+    label: "Articles"
+    folder: "_posts"
+    create: true
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Date", name: "date", widget: "datetime"}
+      - {label: "Body", name: "body", widget: "markdown"}
 
